--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
           </div>
         </div>
       </section>
-      <div class="shade">
+      <!-- <div class="shade">
         <img src="./asset/images/bg-tablet-pattern.svg" alt="" />
-      </div>
+      </div> -->
       <section class="testimonial__section">
         <h2 class="heading-2 text__center">What they’ve said</h2>
         <div class="swiper mySwiper | testimonial__cards">
